bugfix : dashed drag and drop zone on firefox

--- a/static/style.css
+++ b/static/style.css
@@ -243,6 +243,11 @@ button:focus {
     position: absolute;
 }
 
+#update-svg {
+    z-index: 1;
+    position: absolute;
+}
+
 /* <SIDEBAR> */
 #sidebar {
     padding: 5px;
@@ -644,14 +649,17 @@ details[open] summary:before {
 }
 
 .box.has-advanced-upload {
-    outline: 2px dashed #92b0b3;
-    outline-offset: -10px;
-    -webkit-transition: outline-offset .15s ease-in-out, background-color .15s linear;
-    transition: outline-offset .15s ease-in-out, background-color .15s linear;
+    padding: .5rem;
 }
 
-.box.is-dragover {
-    outline: 2px solid #92b0b3;
+.box.has-advanced-upload .box__input {
+    height: 100%;
+    border: 2px dashed #92b0b3;
+    padding: 1.5rem;
+}
+
+.box.is-dragover .box__input {
+    border: 2px solid #92b0b3;
 }
 
 .box.has-advanced-upload .box__icon {
